--- a/src/app.json
+++ b/src/app.json
@@ -3,7 +3,8 @@
     "pages/index/main",
     "pages/logs/main",
     "pages/counter/main",
-    "pages/mine/main"
+    "pages/mine/main",
+    "pages/logs/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
