--- a/project.config.json
+++ b/project.config.json
@@ -13,6 +13,7 @@
 	"projectname": "AmuHome",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
+	"libVersion": "2.6.4",
 	"condition": {
 		"search": {
 			"current": -1,
