--- a/src/app.json
+++ b/src/app.json
@@ -3,8 +3,7 @@
     "pages/index/main",
     "pages/logs/main",
     "pages/counter/main",
-    "pages/mine/main",
-    "pages/logs/index"
+    "pages/mine/main"
   ],
   "window": {
     "backgroundTextStyle": "light",
