我新增了地图页面

--- a/src/app.json
+++ b/src/app.json
@@ -25,13 +25,13 @@
     }, {
       "text": "地图",
       "pagePath": "pages/map/main",
-      "iconPath": "static/tabs/map.png",
-      "selectedIconPath": "static/tabs/map-active.png"
+      "iconPath": "static/tabs/home.png",
+      "selectedIconPath": "static/tabs/home-active.png"
     }, {
       "text": "我的",
       "pagePath": "pages/mine/main",
-      "iconPath": "static/tabs/orders.png",
-      "selectedIconPath": "static/tabs/orders-active.png"
+      "iconPath": "static/tabs/home.png",
+      "selectedIconPath": "static/tabs/home-active.png"
     }],
 
     "items": [{
@@ -42,8 +42,8 @@
     }, {
       "name": "地图",
       "pagePath": "pages/map/main",
-      "icon": "static/tabs/map.png",
-      "activeIcon": "static/tabs/map-active.png"
+      "icon": "static/tabs/home.png",
+      "activeIcon": "static/tabs/home-active.png"
     }],
     "position": "bottom"
   }
